refactoring arguments for last 2 entries